# rapidjson_macros

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml
cmake/: Config.cmake.in
doc/benchmark/: bench_rapidjson_macroless_100000.txt  bench_rapidjson_macros_100000.txt
example/: CMakeLists.txt
example/include/: example.hpp
example/src/: example.cpp
include/rapidjson_macros/: rapidjson_macros
include/rapidjson_macros/details/: collections.hpp  convenience_macros.hpp  map.hpp  primitives.hpp  rapidjson_macros.hpp  serializer_base.hpp  string.hpp  string_literal_picker.hpp  vector.hpp
include/rapidjson_macros/details/rapidjson/: stream.hpp
test/: CMakeLists.txt
test/include/: test_ctor_getter_name_traits.hpp  test_ctor_getter_traits.hpp  test_enum_traits.hpp  test_friend_name_traits.hpp  test_friend_traits.hpp  test_getter_setter_name_traits.hpp  test_getter_setter_traits.hpp  test_member_name_traits.hpp  test_member_traits.hpp  test_utility.hpp
test/src/: test_ctor_getter_name_traits.cpp  test_ctor_getter_traits.cpp  test_enum_traits.cpp  test_friend_name_traits.cpp  test_friend_traits.cpp  test_getter_setter_name_traits.cpp  test_getter_setter_traits.cpp  test_member_name_traits.cpp  test_member_traits.cpp
test/src/bench/: CMakeLists.txt  bench_member_traits.cpp  bench_member_traits_macroless.cpp
